--- a/module/support/configuration/SoccerConfig/data/config/FieldDescription.yaml
+++ b/module/support/configuration/SoccerConfig/data/config/FieldDescription.yaml
@@ -1,6 +1,6 @@
 Units: m
-BallRadius: 0.07
-LineWidth: 0.05
+BallRadius: 0.095
+LineWidth: 0.06
 
 MarkWidth: 0.1
 
@@ -10,11 +10,11 @@ GoalDepth: 0.6
 # Distance between inner edges of goal posts.
 GoalWidth: 2.6
 GoalAreaLength: 1
-GoalAreaWidth: 3
+GoalAreaWidth: 5
 # Height to the bottom of the crossbar.
-GoalCrossbarHeight: 1.25 # from top of wood to ground
+GoalCrossbarHeight: 1.8 # 1.9 from top of wood to ground
 # What shape the goal is (RECTANGLE,CIRCLE)
-GoalpostType: CIRCLE
+GoalpostType: RECTANGLE
 # The crossbar diameter and the goalpost diameter are (supposed to be) equal.
 GoalpostWidth: 0.10
 GoalpostDepth: 0.10
@@ -22,11 +22,7 @@ GoalCrossbarWidth: 0.10
 GoalCrossbarDepth: 0.10
 GoalNetHeight: 1.0
 # Measured from the goal line.
-PenaltyMarkDistance: 1.5 # to the middle of the penalty mark
-CenterCircleDiameter: 1.5
-BorderStripMinWidth: 1.0
+PenaltyMarkDistance: 2.05 # to the middle of the penalty mark
+CenterCircleDiameter: 1.56
+BorderStripMinWidth: 0.7
 PenaltyRobotStart: 1.0
-
-# New field markings
-PenaltyAreaLength: 2
-PenaltyAreaWidth: 5
