--- a/module/input/GameController/data/config/GameController.yaml
+++ b/module/input/GameController/data/config/GameController.yaml
@@ -1,4 +1,4 @@
 player_id: 1
 receive_port: 3838
 send_port: 3939
-udp_filter_address: "10.1.0.104" # If set, will only accept GameController packets from this IP address
+udp_filter_address: "" # If set, will only accept GameController packets from this IP address
