--- a/module/support/NUsight/data/config/NUsight.yaml
+++ b/module/support/NUsight/data/config/NUsight.yaml
@@ -12,21 +12,21 @@ reaction_handles:
   # Overview information for the dashboard, designed for minimum bandwidth
   overview: true
   # Motor positions, orientation, etc.
-  sensor_data: true
+  sensor_data: false
   # Raw image
-  image: true
+  image: false
   # compressed image
-  compressed_image: true
+  compressed_image: false
   # Classified image
-  classified_image: true
+  classified_image: false
   # Vision objects including goals, balls and debugging lines
-  vision_object: true
+  vision_object: false
   # Visual mesh data
-  visual_mesh: true
+  visual_mesh: false
   # Green horizon data
-  green_horizon: true
+  green_horizon: false
   # Localisation state estimates and uncertainties
-  localisation: true
+  localisation: false
   # Data for chart tool in NUsight
   data_point: false
   # Field drawn objects such as an arrow, sphere, etc
@@ -34,9 +34,9 @@ reaction_handles:
   # Subsumption data
   subsumption: false
   # GameController information
-  game_state: true
+  game_state: false
   # Behaviour information
-  behaviour: true
+  behaviour: false
   # Statistics about reactions, modules and runtimes
   reaction_statistics: false
 
