--- a/module/output/ImageCompressor/data/config/ImageCompressor.yaml
+++ b/module/output/ImageCompressor/data/config/ImageCompressor.yaml
@@ -4,6 +4,7 @@ log_level: INFO
 # The settings for each compressor
 # These compressors will be tried in order per camera id until a free compressor is found
 compressors:
+  # `vaapi` only works with access to intel GPU
   # - name: vaapi
   #   concurrent: 2
   #   quality: 90
