--- a/module/vision/GoalDetector/data/config/GoalDetector.yaml
+++ b/module/vision/GoalDetector/data/config/GoalDetector.yaml
@@ -1,8 +1,8 @@
-confidence_threshold: 0.7              # How confident do we need to be that this is a goal point
+confidence_threshold: 0.9              # How confident do we need to be that this is a goal point
 cluster_points: 5                      # How many points do we need to claim this cluster is a viable goal
 disagreement_ratio: 0.20               # How much can the measured goal width vary from actual goal width before we
                                        # treat the posts as part of separate goals
 goal_angular_cov: [0.1, 0.001, 0.001]  # Measurement certainties
 use_median: false                      # Use median rather than mean we determining position of left and right goal
                                        # post edges
-debug: false                           # Turn on debug outputs
+debug: true                           # Turn on debug outputs
