--- a/module/motion/KinematicsConfiguration/data/config/KinematicsConfiguration.yaml
+++ b/module/motion/KinematicsConfiguration/data/config/KinematicsConfiguration.yaml
@@ -26,8 +26,8 @@ head:
     base_position_from_origin: [-0.007, 0, 0.21] # [x, y, z]
   # head movement limits
   limits: # pitch limit is a function of yaw ... need to calculate this properly
-    yaw: [-pi/4, pi/4] # [min_yaw, max_yaw]
-    pitch: [-pi/6, 0] # [min_pitch, max_pitch]
+    yaw: [0, 0] # [min_yaw, max_yaw]
+    pitch: [-pi/10, -pi/10] # [min_pitch, max_pitch]
 # rough measurements
 arm:
   distance_between_shoulders: 0.17 # distance between shoulders
