Add tools for working with nbs files in c++

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -261,6 +261,9 @@ RUN install-from-source https://github.com/espeak-ng/pcaudiolib/archive/1.1.tar.
 COPY usr/local/package/espeak.sh /usr/local/package/espeak.sh
 RUN /usr/local/package/espeak.sh https://github.com/espeak-ng/espeak-ng/releases/download/1.50/espeak-ng-1.50.tgz
 
+# mio memory mapping library
+RUN install-from-source https://github.com/mandreyel/mio/archive/master.tar.gz
+
 # zstr header to have file streams that do zlib compression
 RUN mkdir -p /usr/local/include/zstr \
     && wget https://raw.githubusercontent.com/mateidavid/zstr/v1.0.4/src/zstr.hpp -O /usr/local/include/zstr.hpp \
