--- a/module/input/GameController/data/config/GameController.yaml
+++ b/module/input/GameController/data/config/GameController.yaml
@@ -1,3 +1,4 @@
 player_id: 1
 receive_port: 3838
 send_port: 3939
+udp_filter_address: "" # If set, will only accept GameController packets from this IP address
