--- a/module/input/SensorFilter/data/config/SensorFilter.yaml
+++ b/module/input/SensorFilter/data/config/SensorFilter.yaml
@@ -8,7 +8,7 @@ foot_down:
   certainty_threshold: 0.01 # Height difference of the Z for the Z height method
 
 foot_load_sensor:
-  noise_factor: 1e-4
+  noise_factor: 0.1
   certainty_threshold: 0.5
   uncertainty_threshold: 0.5
 
@@ -17,17 +17,17 @@ motion_filter:
     velocity_decay: [0.5, 0.5, 0.5]
   noise:
     measurement:
-      accelerometer: [1e-3, 1e-3, 1e-3] # x, y, z
-      accelerometer_magnitude: [1e-4, 1e-4, 1e-4] # x, y, z
-      gyroscope: [1e-5, 1e-5, 1e-5] # x, y, z
+      accelerometer: [0.1, 0.1, 0.1] # x, y, z
+      accelerometer_magnitude: [0.1, 0.1, 0.1] # x, y, z
+      gyroscope: [0.1, 0.1, 0.1] # x, y, z
       flat_foot_odometry: [5e-8, 5e-8, 5e-8] # x, y, z
-      flat_foot_orientation: [5e-6, 5e-6, 5e-6, 5e-6] # QX, QY, QZ, QW
+      flat_foot_orientation: [0.1, 0.1, 0.1, 0.1] # QX, QY, QZ, QW
     process:
       position: [1e-2, 1e-2, 1e-2]
       velocity: [1e-2, 1e-2, 1e-2]
-      rotational_velocity: [1e-2, 1e-2, 1e-2]
-      rotation: [1e-3, 1e-3, 1e-3, 1e-3]
-      gyroscope_bias: [1e-3, 1e-3, 0.1] # should be very small
+      rotational_velocity: [1e-5, 1e-5, 1e-5]
+      rotation: [1e-3, 1e-3, 1e-3, 1e-2]
+      gyroscope_bias: [1e-1, 1e-1, 1e-1] # should be very small
 
   initial:
     mean:
@@ -35,10 +35,10 @@ motion_filter:
       velocity: [0, 0, 0] # Not moving
       rotational_velocity: [0, 0, 0] # Not spinning
       rotation: [0, 0, 0, 1] # Upright (QX, QY, QZ, QW)
-      gyroscope_bias: [0, 0, 0.3] # No bias
+      gyroscope_bias: [0, 0.01, 0.25] # No bias
     covariance:
       position: [1e-3, 1e-3, 1] # We are pretty sure of our x,y when we start
       velocity: [1e-3, 1e-3, 1e-3] # We are unsure of our velocity
-      rotation: [0.1, 0.1, 0.1, 0.1] # Not very sure of rotation (QX, QY, QZ, QW)
+      rotation: [0.01, 0.01, 0.01, 0.01] # Not very sure of rotation (QX, QY, QZ, QW)
       rotational_velocity: [0.1, 0.1, 0.1] # Fairly unsure about our rotational velocity
-      gyroscope_bias: [1, 1, 1] # Very unsure about our gyroscope bias
+      gyroscope_bias: [0.5, 0.5, 1] # Very unsure about our gyroscope bias
