--- a/module/support/optimisation/NSGA2Optimiser/data/config/NSGA2Optimiser.yaml
+++ b/module/support/optimisation/NSGA2Optimiser/data/config/NSGA2Optimiser.yaml
@@ -12,125 +12,46 @@ eta:
   C: 12
   M: 30
 
-# The following values are setting the limits for the walk engine parameters.
-# [initial value, minimum, maximum]
+# The following values are setting the initial values nad limits for the walk engine parameters.
+# Each param is the tuple [initial value, minimum, maximum]. These values are merged with the
+# values in QuinticWalk.yaml for an individual, and then evaluated with the walk.
 walk:
-  # Full walk cycle frequency
+  # Full walk cycle frequency (how long it takes in seconds for a left + right steps)
   # (in Hz, > 0)
-  freq: [0.7, 0.001, 2]
-  # Length of double support phase in half cycle
+  freq: [0.7, 0.5, 1.75]
+  # Length of double support phase in half cycle (how long both legs should be on the ground, as a ratio of how long it takes for a single step)
   # (ratio, [0:1])
-  double_support_ratio: [0.55, 0.55, 0.55]
-  # Give extra swing to first step for better start
-  # (in ?, [0:10])
-  first_step_swing_factor: [0.8, 0.5, 1.0]
+  double_support_ratio: [0.55, 0.1, 0.55]
   foot:
-    # Lateral distance between the feet center
+    # Lateral distance between the feet center (how spread apart the feet should be)
     # (in m, >= 0)
-    distance: [0.28, 0.1, 0.3]
-    # Maximum flying foot height
+    distance: [0.28, 0.16, 0.3]
+    # Maximum flying foot height (how high we lift a foot from the ground)
     # (in m, >= 0)
-    rise: [0.15, 0.0, 0.2]
-    # Pause of Z movement on highest point
-    # (single support cycle ratio, [0,1])
-    z_pause: [0.08, 0, 1]
-    put_down:
-      # Let the foot's downward trajectory end above the ground
-      # this is helpful if the support leg bends
-      # (in m, >= 0)
-      z_offset: [0.0, 0.0, 0.2]
-      # Phase time for moving the foot from Z offset to ground
-      # (in half cycle ratio [0:1])
-      phase: [0.4, 0, 1]
-      # Roll offset on flying foot at put down
-      # (in rad, [-1,1])
-      roll_offset: [0.0, -1, 1]
-    # Phase of flying foot apex
-    # (single support cycle phase, [0:1])
-    apex_phase: [0.15, 0, 1]
-    overshoot:
-      # Foot X/Y overshoot in ratio of step length
-      # (ratio, >= 0)
-      ratio: [0.2, 0, 2]
-      # Foot X/Y overshoot phase
-      # (single support cycle phase, [footApexPhase:1]
-      phase: [0.0, 0.0, 1.0]
+    rise: [0.15, 0.05, 0.16]
   trunk:
-    # Height of the trunk from ground
+    # Height of the trunk from ground (how much we bend the knee, for the entire walk, fully standing is 0.51-ish)
     # (in m, > 0)
-    height: [0.45, 0.3, 0.5]
-    # Trunk pitch orientation
+    height: [0.45, 0.4, 0.5]
+    # Trunk pitch orientation (how much we lean the torso forward or backward, does not change)
     # (in rad)
     pitch: [24 * pi / 180, -15 * pi / 180, 30 * pi / 180]
-    # Phase offset of trunk oscillation
-    # (half cycle phase, [-1:1])
-    phase: [0.15, -1.0, 1.0]
-    # Trunk forward offset
+    # Trunk forward offset (how much we offset the trunk forward or backward lean when walking)
     # (in m)
-    x_offset: [0.03, -0.3, 0.3]
-    # Trunk lateral offset
+    x_offset: [0.03, -0.05, 0.05]
+    # Trunk lateral offset (how much we offset the trunk left or right lean when walking)
     # (in m)
-    y_offset: [-0.01, 0.01, 0.01]
-    # Trunk lateral oscillation amplitude ratio
+    y_offset: [-0.01, 0.02, 0.02]
+    # Trunk lateral oscillation amplitude ratio (how much we swing the trunk left and right when stepping)
     # (ratio, >= 0)
-    swing: [0.03, 0, 1]
-    # Trunk swing pause length in phase at apex
+    swing: [0.03, 0.2, 0.05]
+    # Trunk swing pause length in phase at apex (how long we keep the trunk at the max swing position, before swinging back)
     # (half cycle ratio, [0:1])
-    pause: [0.1, 0.0, 1.0]
-    x_offset_p_coef:
-      # Trunk forward offset proportional to forward step
-      # (in 1)
-      forward: [0.09, 0.0, 1.0]
-      # Trunk forward offset proportional to rotation step
-      # (in m/rad)
-      turn: [0.08, 0.0, 1.0]
-    pitch_p_coef:
-      # Trunk pitch orientation proportional to forward step
-      # (in rad/m)
-      forward: [18 * pi / 180, -18 * pi / 180, 18 * pi / 180]
-      # Trunk pitch orientation proportional to rotation step
-      # (in 1)
-      turn: [11 * pi / 180, -11 * pi / 180, 11 * pi / 180]
-  kick:
-    # Length of kick movement
-    # (in m, [0:1])
-    length: [0.09, 0.0, 1.0]
-    # Time of kick apex
-    # (ratio of single support phase, [0:1])
-    phase: [0.75, 0.0, 1.0]
-    # Kick velocity
-    # (in m/s, > 0)
-    vel: [0.2, 0.0, 10.0]
+    pause: [0.1, 0.0, 0.2]
   pause:
     # Time that the walking is paused when becoming unstable
     # (in s, [0:10])
-    duration: [0.5, 0.0, 10.0]
-
-max_step:
-  # Maximal step length in X
-  # (in m, [0:1])
-  x: [0, 1]
-  # Maximal step length in Y
-  # (in m, [0:1])
-  y: [0, 1]
-  # Maximal step turn in yaw
-  # (in rad, [0:1.5])
-  z: [0, 1.5]
-  # Maximal step length in X and Y combined
-  # (in m, [0:1])
-  xy: [0, 1]
-
-imu:
-  # Activates the IMU to stop the walking when the robot gets unstable
-  active: false
-  pitch:
-    # Threshold for stopping for the robot pitch
-    # (in rad, [0:1])
-    threshold: [0.5, 0.0, 1.0]
-  roll:
-    # Threshold for stopping for the robot roll
-    # (in rad, [0:1])
-    threshold: [0.4, 0.0, 1.0]
+    duration: [0.5, 0.0, 2.0]
 
 gains:
-  legs: [13, 10, 30]
+  legs: [13, 10, 25]
