--- a/module/support/NUsight/data/config/NUsight.yaml
+++ b/module/support/NUsight/data/config/NUsight.yaml
@@ -12,7 +12,7 @@ reaction_handles:
   # Overview information for the dashboard, designed for minimum bandwidth
   overview: true
   # Motor positions, orientation, etc.
-  sensor_data: false
+  sensor_data: true
   # Raw image
   image: false
   # compressed image
@@ -26,7 +26,7 @@ reaction_handles:
   # Green horizon data
   green_horizon: false
   # Localisation state estimates and uncertainties
-  localisation: false
+  localisation: true
   # Data for chart tool in NUsight
   data_point: false
   # Field drawn objects such as an arrow, sphere, etc
