--- a/module/platform/Webots/data/config/webots.yaml
+++ b/module/platform/Webots/data/config/webots.yaml
@@ -1,6 +1,9 @@
 # Controls the minimum log level that NUClear log will display
 log_level: DEBUG
 
+# Maximum FSR sensor value. This is based on the Darwin-OP FSR sensors
+# Max value 65,535 / 1000 (N) = 65.535 N
+max_fsr_value: 65.535
 # Maximum velocity from NUgus.proto motors
 max_velocity_mx64: 8.17
 max_velocity_mx106: 5.76
