Add better handling of the multiple foot down algorithms

--- a/module/input/SensorFilter/data/config/SensorFilter.yaml
+++ b/module/input/SensorFilter/data/config/SensorFilter.yaml
@@ -4,13 +4,16 @@ buttons:
   debounce_threshold: 7
 
 foot_down:
-  from_load: true # If true uses the virtual load foot down, if false use the Z height method
-  certainty_threshold: 0.01 # Height difference of the Z for the Z height method
-
-foot_load_sensor:
-  noise_factor: 1e-4
-  certainty_threshold: 0.5
-  uncertainty_threshold: 0.5
+  method: FSR
+  known_methods:
+    - name: FSR
+      certainty_threshold: 30
+    - name: Z_HEIGHT
+      certainty_threshold: 0.01 # Height difference of the Z for the Z height method
+    - name: LOAD
+      noise_factor: 1e-4
+      certainty_threshold: 0.5
+      uncertainty_threshold: 0.5
 
 motion_filter:
   update:
