--- a/module/motion/QuinticWalk/data/webots/QuinticWalk.yaml
+++ b/module/motion/QuinticWalk/data/webots/QuinticWalk.yaml
@@ -1,21 +1,21 @@
 walk:
-  # Full walk cycle frequency
+  # Full walk cycle frequency (how long it takes in seconds for a left + right steps)
   # (in Hz, > 0)
   freq: 0.2
-  # Length of double support phase in half cycle
+  # Length of double support phase in half cycle (how long both legs should be on the ground, as a ratio of how long it takes for a single step)
   # (ratio, [0:1])
   double_support_ratio: 0.3
   # Give extra swing to first step for better start
   # (in ?, [0:10])
   first_step_swing_factor: 0.8 #1.0
   foot:
-    # Lateral distance between the feet center
+    # Lateral distance between the feet center (how spread apart the feet should be)
     # (in m, >= 0)
     distance: 0.15 #0.28
-    # Maximum flying foot height
+    # Maximum flying foot height (how high we lift a foot from the ground)
     # (in m, >= 0)
     rise: 0.15 #0.1
-    # Pause of Z movement on highest point
+    # Pause of Z movement on highest point (how long we hold a foot at the top, as a ratio of how long we're standing on one foot)
     # (single support cycle ratio, [0,1])
     z_pause: 0.08 #0.04
     put_down:
@@ -40,25 +40,25 @@ walk:
       # (single support cycle phase, [footApexPhase:1]
       phase: 0.0
   trunk:
-    # Height of the trunk from ground
+    # Height of the trunk from ground (how much we bend the knee, for the entire walk, fully standing is 0.51-ish)
     # (in m, > 0)
     height: 0.45
-    # Trunk pitch orientation
+    # Trunk pitch orientation (how much we lean the torso forward or backward, does not change)
     # (in rad)
     pitch: 15 * pi / 180 #28
     # Phase offset of trunk oscillation
     # (half cycle phase, [-1:1])
     phase: 0.15
-    # Trunk forward offset
+    # Trunk forward offset (how much we offset the trunk forward or backward lean when walking)
     # (in m)
     x_offset: 0.03 # 0.045
-    # Trunk lateral offset
+    # Trunk lateral offset (how much we offset the trunk left or right lean when walking)
     # (in m)
     y_offset: -0.01
-    # Trunk lateral oscillation amplitude ratio
+    # Trunk lateral oscillation amplitude ratio (how much we swing the trunk left and right when stepping)
     # (ratio, >= 0)
     swing: 0.03 #0.05
-    # Trunk swing pause length in phase at apex
+    # Trunk swing pause length in phase at apex (how long we keep the trunk at the max swing position, before swinging back)
     # (half cycle ratio, [0:1])
     pause: 0.1 #0
     x_offset_p_coef:
@@ -93,16 +93,16 @@ walk:
 max_step:
   # Maximal step length in X
   # (in m, [0:1])
-  x: 0.04
+  x: 1
   # Maximal step length in Y
   # (in m, [0:1])
-  y: 0.04
+  y: 1
   # Maximal step turn in yaw
   # (in rad, [0:1.5])
-  z: 0.50
+  z: 1.5
   # Maximal step length in X and Y combined
   # (in m, [0:1])
-  xy: 0.05
+  xy: 1
 
 imu:
   # Activates the IMU to stop the walking when the robot gets unstable
