Make optimiser work with webots, update parameters, fitness, etc
Co-authored-by: Joel Wong <wongjoel@users.noreply.github.com>
Co-authored-by: Thomas O'Brien <thomas16441@gmail.com>

--- a/module/support/optimisation/NSGA2Optimiser/data/config/NSGA2Optimiser.yaml
+++ b/module/support/optimisation/NSGA2Optimiser/data/config/NSGA2Optimiser.yaml
@@ -1,7 +1,7 @@
 population_size: 40
 num_generations: 300
 num_objectives: 2
-num_contraints: 2
+num_constraints: 2
 num_real_vars: 2
 seed: 666
 probabilities:
