Revert unnecessary changes

--- a/module/behaviour/skills/HeadBehaviourSoccer/data/config/HeadBehaviourSoccer.yaml
+++ b/module/behaviour/skills/HeadBehaviourSoccer/data/config/HeadBehaviourSoccer.yaml
@@ -27,7 +27,7 @@ oscillate_search: false
 searches:
   - #enum type for search
     search_type: "LOST"
-    #Points in absolute angle (degrees) relative to the horizon and x-axis of robot
+    #Points in absolute angle (degrees) relative to the horizon and x-xis of robot
     points:
       - [0, -45]
       - [0, 0]
