--- a/module/vision/BallDetector/data/config/BallDetector.yaml
+++ b/module/vision/BallDetector/data/config/BallDetector.yaml
@@ -1,11 +1,9 @@
-confidence_threshold: 0.7 # How confident do we need to be that this is a ball point
-cluster_points: 3 # How many points do we need to claim this cluster is a viable ball
-minimum_ball_distance: 0.20 # Balls closer than this distance can't possibly be balls
-distance_disagreement:
-  0.30 # Percentage difference between width and projection based distances. 0.0 means
-  # the distance measurements must match perfectly
-maximum_deviation:
-  0.17 # A threshold on how large the standard deviation of the angle between ray and
-  # cone axis can be
-ball_angular_cov: [0.1, 0.01, 0.01] # Measurement certainties
-debug: true # Turn on debug outputs
+confidence_threshold: 0.7            # How confident do we need to be that this is a ball point
+cluster_points: 3                    # How many points do we need to claim this cluster is a viable ball
+minimum_ball_distance: 0.20          # Balls closer than this distance can't possibly be balls
+distance_disagreement: 0.30          # Percentage difference between width and projection based distances. 0.0 means
+                                     # the distance measurements must match perfectly
+maximum_deviation: 0.17              # A threshold on how large the standard deviation of the angle between ray and
+                                     # cone axis can be
+ball_angular_cov: [0.1, 0.01, 0.01]  # Measurement certainties
+debug: false                         # Turn on debug outputs
